crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__match__as_pattern_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/match/as_pattern_1.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            13,
        ),
        range: 0..210,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        12,
                    ),
                    range: 0..209,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 140..209,
                            node_index: NodeIndex(
                                11,
                            ),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 145..158,
                                    node_index: NodeIndex(
                                        9,
                                    ),
                                    value: BinOp(
                                        ExprBinOp {
                                            node_index: NodeIndex(
                                                8,
                                            ),
                                            range: 145..158,
                                            left: Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        5,
                                                    ),
                                                    range: 146..152,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                            op: Add,
                                            right: NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(
                                                        6,
                                                    ),
                                                    range: 156..158,
                                                    value: Complex {
                                                        real: 0.0,
                                                        imag: 1.0,
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(
                                            10,
                                        ),
                                        range: 205..209,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
3 |     #             complex literal pattern
4 |     #             v
5 |     case (x as y) + 1j:
  |           ^^^^^^ Syntax Error: Expected a real number in complex literal pattern
6 |     #     ^^^^^^
7 |     #    as-pattern
  |
